<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peak Badger</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Start</string>
    <string name="title_section2">My Peaks</string>
    <string name="title_section3">Friends</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_coming_soon">Leaderboards\n Coming Soon!</string>
    <string name="check_in">Check In</string>
    <string name="add_a_peak">Add a peak</string>
    <string name="no_peaks">No peaks yet!</string>
    <string name="title_activity_save_peak">SavePeakActivity</string>
    <string name="ok">OK</string>
    <string name="not_on_peak">You Aren\'t on a Peak!</string>
    <string name="not_on_peak_details">Sorry, you are not actually on a peak. Check your map
        and try again.  Happy Hiking!</string>
    <string name="peak">Peak: </string>
    <string name="height">Height: </string>
    <string name="lat">Lat: </string>
    <string name="lng">Lng: </string>
    <string name="save">Save</string>
    <string name="peak_saved">Your peak has been saved</string>
    <string name="action_my_account">My Account</string>
    <string name="title_activity_facebook_login">Facebook Login</string>
    <string name="facebook_coming_soon">Facebook\n Coming Soon!</string>
    <string name="badges">%s Badges</string>
    <string name="feet_climbed">%s ft Climbed</string>
    <string name="goals_reached">%s Goals Reached</string>
    <string name="title_activity_my_peaks">My Peaks</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="challenges">Challenges</string>
    <string name="title_activity_my_badges">My Badges</string>
    <string name="title_activity_leader_board">Leaderboard</string>
    <string name="no_users">No Users Yet...</string>
</resources>
